--- a/T3/T3_Windows_Forms_Cilent.csproj
+++ b/T3/T3_Windows_Forms_Cilent.csproj
@@ -55,7 +55,8 @@
     <Compile Include="EditSeminar.Designer.cs">
       <DependentUpon>EditSeminar.cs</DependentUpon>
     </Compile>
-    <Compile Include="ISessionWraper.cs" />
+    <Compile Include="IdName.cs" />
+    <Compile Include="Lector.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +65,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seminar.cs" />
     <Compile Include="Service References\LectorsSeminarsDataAccessLayerWCFService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -105,12 +107,6 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\LectorsSeminarsDataAccessLayerWCFService\LectorsSeminarsDataAccessLayerService.wsdl" />
-    <None Include="Service References\LectorsSeminarsDataAccessLayerWCFService\T3.LectorsSeminarsDataAccessLayerWCFService.Lector.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\LectorsSeminarsDataAccessLayerWCFService\T3.LectorsSeminarsDataAccessLayerWCFService.Seminar.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
