--- a/T3/T3_Windows_Forms_Cilent.csproj
+++ b/T3/T3_Windows_Forms_Cilent.csproj
@@ -112,6 +112,9 @@
       <Name>LectorsSeminarsWCFClientLayer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="LectorInfoTemplate.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
